# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.22.11
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Bugfix: Let -... in /etc/portage/package.accept_keywords remove
	  ACCEPT_KEYWORDS, see http://bugs.gentoo.org/show_bug.cgi?id=378767
	- eix-test-obsolete: Set DEFAULT_FORMAT=compact instead using -c
	  (chooses compact format absolutely, not toggling...), see http://
	  developer.berlios.de/bugs/?func=detailbug&bug_id=18284&group_id=11597

*eix-0.22.10
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add -Wl,-z,noexecstack with strong-optimization and security:
	  gcc-4.6 -flto turns on execstack which is probably a bug, see
	  http://bugs.gentoo.org/show_bug.cgi?id=369795
	- In case of -flto add CXXFLAGS to LDFLAGS unconditionally, see
	  http://bugs.gentoo.org/show_bug.cgi?id=374217
	- scripts: Use readlink only if it supports -f

*eix-0.22.9
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support -~* keywords: Introduce {isminusunstable}, {wasminusunstable}
	- Support alternative /etc/portage/make.profile location, see
	  http://bugs.gentoo.org/show_bug.cgi?id=358647
	- Support layman-2
	- Fix handling of non-matching /etc/portage/package.accept_keywords:
	  http://bugs.gentoo.org/show_bug.cgi?id=370799
	- Make eix-test-obsolete more intelligent concerning skipping of
	  checks, see http://bugs.gentoo.org/show_bug.cgi?id=358861
	- Fix eix-test-obsolete's support for REDUNDANT_IF_IN_CFLAGS.
	  Thanks to Michał Bartoszkiewicz <mbartoszkiewicz at gmail.com>,
	  see http://bugs.gentoo.org/show_bug.cgi?id=372921
	- Provide poor man's einfo, ewarn, eerror, ebegin, eend to avoid
	  dependency on openrc: http://bugs.gentoo.org/show_bug.cgi?id=372887
	- Introduce ROOT_UID for usage with prefix, see
	  http://bugs.gentoo.org/show_bug.cgi?id=364351
	  Thanks to Jacob Godserv at <jacobgodserv at gmail.com> for the patch.
	- Add several ATTRIBUTE_PURE
	- Treat provide as a list of strings, see
	  http://bugs.gentoo.org/show_bug.cgi?id=358729