@@ -1,5 +1,10 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.22.12
+	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Bugfix: Let -... in /etc/portage/package.accept_keywords remove
+	  previous keywords of /etc/portage/package.accept_keywords
+
 *eix-0.22.11
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Bugfix: Let -... in /etc/portage/package.accept_keywords remove
